   -- Fixed bug in EVICT code that caused a segmentation fault
   -- Added SKILL_PRACTISE_AMOUNT and associated code all over the place
      to allow skills to improve with practice.  A unit may improve at
      most one skill per month, and will only improve skills they already
      have.  Using a skill counts as practising its prerequisites if they
      need to be impoved before the skill can advance further.  I suggest
      a value of 5 for SKILL_PRACTISE_AMOUNT.
   -- Fixed a bug where CanSee was not taking account of MIND skill.
   -- Modified combat acquisition algorithm for special attacks so that
      they will always find an appropriate target if one exists.
   -- Fixed a bug where unmounted units were being matched in the effect
      matching code for MOUNTIF.
   -- Cleaned up a small section of rules for clarity.
   -- Fixed up a bug with two sell orders for the same item which did
      insufficient checking that you could sell both quantities.  This
	  bug existed for a while but never showed up because of the bug
	  with multiple sells of the same item which I fixed a few weeks ago.
   -- Changed MOVE and SAIL so that if the unit runs out of movement
      points, the remaining moves are added to the front of the TURN
      queue.  This allows caravans using @TURN to work properly despite
      weather changing move costs.  Also fixed a bug where a single
      @TURN command would be lost because of a pointer being reused.
   -- Modified TURN/ENDTURN processing to cope with arbitrarily deep
      TURN and FORM nesting, and cleaned up the error handling.
   -- Moved the correlation between faction points and what they give
      you from being hardcoded in extra.cpp to an array in rules.cpp.
   -- Small fix so that all items (even non-give) can actually be discarded.
   -- Added check that there is actually an active unit when parsing TURN
      and ENDTURN orders.  Fixes segfault.