@@ -517,3 +517,6 @@ Changes from 4.0.9 -> 4.0.10
    -- Small fix so that all items (even non-give) can actually be discarded.
    -- Added check that there is actually an active unit when parsing TURN
       and ENDTURN orders.  Fixes segfault.
+   -- Fixed bugs in orders checker where it was trying to do a
+      unit->Error() where it should have been doing ParseError() since
+      unit isn't valid in the orders checker.
